--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
     background-color: #f0f0f0;
     margin: 0;
 }
 
 .header {
-    background-image: url('img/Les pubs de Carambar.jpg'); /* Spécifiez le chemin de l'image ici */
+    background-image: url('img/Les pubs de Carambar.jpg');
+    background-color: #e88439;
     background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
-    height: 200px;
+    height: 500px;
     width: 100%;
 }
 
@@ -24,7 +24,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+    margin-top: 120px;
 }
 
 button {
