--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,10 @@ body {
     font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-color: #f0f0f0;
     margin: 0;
+    /* padding-top: 20px; Ajoute de l'espace pour le header */
 }
 
 .header {
@@ -24,7 +24,9 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 120px;
+    margin-top: 20px;
+    width: 80%;
+    max-width: 600px;
 }
 
 button {
@@ -35,23 +37,37 @@ button {
     color: #333;
     border: none;
     border-radius: 10px;
+    margin-top: 10px;
 }
 
 button:hover {
     background-color: #ff9900;
 }
 
-#affichageBlague {
+#affichageBlague, #messageAjout, #affichageToutesBlagues {
     margin-top: 20px;
     font-size: 18px;
     color: #333;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+input {
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
 .footer {
-    position: fixed;
-    bottom: 10px;
     width: 100%;
     text-align: center;
+    margin-top: 20px;
 }
 
 .footer a {
