--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     align-items: center;
     background-color: #f0f0f0;
     margin: 0;
-    padding-top: 20px; /* Ajoute de l'espace pour le header */
 }
 
 .header {
@@ -14,7 +13,7 @@ body {
     background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
-    height: 200px; /* Ajustez la hauteur selon vos besoins */
+    height: 200px;
     width: 100%;
 }
 
